--- a/WebContent/resources/css/additionalStyling.css
+++ b/WebContent/resources/css/additionalStyling.css
@@ -46,7 +46,10 @@ form.no-style{
 }
 .ui-dropdownchecklist-item label {
 	cursor: pointer;
-	}
+}
 .ui-dropdownchecklist-item input[type="checkbox"] { 
 	margin-right: 0.5em; 
-	} 
+}
+#other_procedures{
+	display:none;
+}
