Added old changes from commit cee58b78f13b79fd7c41cdeac3e3fecb570c2d06 . Also the styling of the warning box over the heatmap

--- a/WebContent/resources/css/additionalStyling.css
+++ b/WebContent/resources/css/additionalStyling.css
@@ -50,3 +50,6 @@ form.no-style{
 .ui-dropdownchecklist-item input[type="checkbox"] { 
 	margin-right: 0.5em; 
 	} 
+#other_procedures{
+ 	display:none;
+ }
