--- a/WebContent/resources/css/additionalStyling.css
+++ b/WebContent/resources/css/additionalStyling.css
@@ -90,3 +90,19 @@ button.exportButton{
 .abnormalities .sprite_taste_olfaction_phenotype { margin: 120px 0px 0px 80px; background-position: -80px -120px; }
 .abnormalities .sprite_integument_phenotype_or_pigmentation_phenotype { margin: 120px 0px 0px 120px; background-position: -120px -120px; }
 .abnormalities .sprite_vision_eye_phenotype { margin: 120px 0px 0px 160px; background-position: -160px -120px; }
+
+#spin-overview-charts, #single-chart-div{
+	width: 100%;
+	height: 400px;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+#chart-container {
+	width: 100%;
+ height: 400px;
+  position: relative;
+}
+
+#single-chart-div{min-width: 400px; height: 400px; margin: 0 auto;}
