--- a/WebContent/resources/css/searchPage.css
+++ b/WebContent/resources/css/searchPage.css
@@ -138,7 +138,6 @@ div#saveTable {
 	cursor: pointer;	
 	padding: 1px 5px;
 	z-index: 99;	
-	background-color: #F4F4F4;
 	width: auto;
 }
 div#saveTable span {
@@ -204,5 +203,5 @@ span.status.done {
 
 /* Table Headings */
 th span.main                        { white-space:nowrap; }
-th span.sub                         { font-size: 0.8em; } 
+th span.sub                         { font-size: 0.8em; display: block;} 
 /* end of Disease search results */
