--- a/WebContent/resources/css/additionalStyling.css
+++ b/WebContent/resources/css/additionalStyling.css
@@ -109,7 +109,7 @@ button.exportButton{
 
 /* Graph filter */
 .filters                            { margin: 1em 0; padding: 1em; background: #f4f4f4; -moz-border-radius: 3px; -webkit-border-radius: 3px; -ms-border-radius: 3px; border-radius: 3px; }
-.filter                             { float: left; padding-right: 2em; }
+.filter                             { float: left; padding-right: 2em; display:inline-block;}
 .ftype                              { padding-left: 1em; cursor: pointer; }
 .ftype:before                       { position: absolute; font-family: 'FontAwesome'; content: "\f0da"; margin-left: -1em; }
 .filter.open .ftype:before          { content: "\f0d7"; }
