Added styling for heatmap phenotype page

--- a/WebContent/resources/css/additionalStyling.css
+++ b/WebContent/resources/css/additionalStyling.css
@@ -120,3 +120,12 @@ button.exportButton{
 .status {
 	margin-right:5pt;
 }
+
+#heatmap-container {
+    height: 600px;
+    width: 800px
+}
+#phenodcc-heatmap-3 {
+    height: 600px;
+    width: 800px
+}
