Added qtips for grey phenotype icons gene page

--- a/WebContent/resources/css/additionalStyling.css
+++ b/WebContent/resources/css/additionalStyling.css
@@ -67,6 +67,7 @@ button.exportButton{
 	font-size:14px;
 }
 
+.abnormalities .no-sprite  { position: absolute; width: 40px; height: 40px;}
 .abnormalities .sprite_mortality_aging { margin: 0px 0px 0px 0px; background-position: 0px 0px; }
 .abnormalities .sprite_embryogenesis_phenotype { margin: 0px 0px 0px 40px; background-position: -40px 0px; }
 .abnormalities .sprite_reproductive_system_phenotype { margin: 0px 0px 0px 80px; background-position: -80px 0px; }
