--- a/WebContent/resources/css/default.css
+++ b/WebContent/resources/css/default.css
@@ -528,7 +528,7 @@ span.status.done        { background: #0978A1 !important; }
 .accordion-body         { padding: 0 0 1em 0; display: none; }
 /* .accordion-body .grid { display: block !important; } */
 .accordion-body ul      { padding: 0; }
-.accordion-body li      { float: left; width: 18%; height: 300px; padding: 1%; margin: 0; list-style: none; }
+.accordion-body li      { float: left; width: 18%; height: auto; padding: 1%; margin: 0; list-style: none; }
 .accordion-body li img  { width: 100%; height: auto; }
 .caption                { font-size: 0.8em; text-align: center; }
 sup                     { text-decoration: none; position: relative; vertical-align: baseline; top: -0.5em; }
