--- a/WebContent/resources/css/searchPage.css
+++ b/WebContent/resources/css/searchPage.css
@@ -212,7 +212,7 @@ span.ellipse {
 	padding-top: 10px;
 }
 
-div.mpCol div.title a {
+div.mpCol div.title a, div.maCol div.title a {
 	font-weight: normal !important;
 	font-size: 16px !important;
 	text-decoration: underline !important;
