add padding to flush the checkboxes out (see issue: https://www.ebi.ac.uk/panda/jira/browse/MPII-795 )

--- a/WebContent/resources/css/additionalStyling.css
+++ b/WebContent/resources/css/additionalStyling.css
@@ -41,7 +41,8 @@ form.no-style{
 	white-space:nowrap;
 }
 .ui-dropdownchecklist-item {
-	margin: 0.3em 0;
+	margin: 0;
+	padding: 0.3em 0;
 	cursor: pointer !important;
 }
 .ui-dropdownchecklist-item label {
