--- a/WebContent/resources/css/geneHeatmapStyling.css
+++ b/WebContent/resources/css/geneHeatmapStyling.css
@@ -16,12 +16,15 @@ th {
 }
 
 th span {
-  margin-bottom: 10px;
-  padding: 0 .5em;
+  margin-bottom: 0px;
+  padding: 0.0em;
   writing-mode: tb-rl;
   filter: flipv fliph;
   -webkit-transform:rotate(-90deg);
   -moz-transform:rotate(-90deg);
   white-space:nowrap; 
   display:block;
+  padding: 0.0em 0.0em 0.0em 0.0em;
+  word-wrap: break-word;
+  font-size:70%; 
 }
