removed a class from span so that jquery autocomplete is happy

--- a/WebContent/resources/css/searchPage.css
+++ b/WebContent/resources/css/searchPage.css
@@ -13,7 +13,7 @@ ul.ui-autocomplete li a {
 ul.ui-autocomplete li a:hover {
 	background-color: #D4D4D4 !important;	
 }
-span.sugSpan {
+span.gene, span.mp, span.ma, span.disease {
 	color: black;
 }
 b.sugTerm {
