move qc css class to default

--- a/WebContent/resources/css/default.css
+++ b/WebContent/resources/css/default.css
@@ -486,6 +486,7 @@ a.status.inprogress,
 span.status.inprogress  { background: #EF7B0B !important; }
 a.status.done,
 span.status.done        { background: #0978A1 !important; }
+a.status.qc, span.status.qc        { background:gray !important; }
 
 /* Sprite Abnormalities */
 .abnormalities          { float: right; width: 200px; height: 160px; }
