--- a/WebContent/resources/css/searchPage.css
+++ b/WebContent/resources/css/searchPage.css
@@ -263,3 +263,9 @@ span.dtype {
 span.subMatch {
 	color: #0978A1;
 }
+
+div.subinfo ul li {
+	margin-left: 20px !important;
+	padding-left: 5px !important;
+	list-style: disc !important;
+}
