--- a/WebContent/resources/css/searchPage.css
+++ b/WebContent/resources/css/searchPage.css
@@ -265,12 +265,12 @@ span.subMatch {
 }
 
 div.subinfo ul li {
-	margin-left: 20px !important;
-	padding-left: 10px !important;
-	/*list-style: disc !important;*/
-	/*list-style-image: url('../img/gray_bullet.jpg');*/
+	margin-left: 20px;
+	padding-left: 10px;
 	background-image: url('../img/gray_bullet.jpg');
 	background-repeat: no-repeat;
     background-position: 0px 50%; 
-	
+}
+span.label {
+	color: gray;
 }
