deals with facet count being concatenated when window is resized

--- a/WebContent/resources/css/searchPage.css
+++ b/WebContent/resources/css/searchPage.css
@@ -286,3 +286,8 @@ span.showMore {
 span.viability, span.fertility {
 	font-weight: bold;
 }
+
+/* deals with facet count being concatenated when window is resized */
+li.fcat span.fcount {
+	padding-right: 5px;	
+}
