experimenting with widht of span and facet div so that long facet text will not cause facet count being concatenated or placed side by side

--- a/WebContent/resources/css/searchPage.css
+++ b/WebContent/resources/css/searchPage.css
@@ -288,6 +288,10 @@ span.viability, span.fertility {
 }
 
 /* deals with facet count being concatenated when window is resized */
-li.fcat span.fcount {
-	padding-right: 5px;	
+li.fcat > span.flabel {
+    padding-right: 40px;
+    word-wrap:break-word !important;
+}
+div#facet {
+	width: 280px !important;
 }
