--- a/WebContent/resources/css/searchPage.css
+++ b/WebContent/resources/css/searchPage.css
@@ -289,9 +289,18 @@ span.viability, span.fertility {
 
 /* deals with facet count being concatenated when window is resized */
 li.fcat > span.flabel {
-    padding-right: 40px;
+    max-width: 170px;
+    display: inline-block;
     word-wrap:break-word !important;
 }
+
+li.fcat > input {
+	vertical-align: top;
+}	
 div#facet {
 	width: 280px !important;
+}
+
+li.fcat:hover {
+	background-color: #F2F2F2;
 }
