--- a/WebContent/resources/css/searchPage.css
+++ b/WebContent/resources/css/searchPage.css
@@ -298,7 +298,7 @@ li.fcat > input {
 	vertical-align: top;
 }	
 div#facet {
-	width: 280px !important;
+	/*width: 280px !important;*/
 }
 
 li.fcat:hover {
