--- a/WebContent/resources/css/searchPage.css
+++ b/WebContent/resources/css/searchPage.css
@@ -311,3 +311,12 @@ div#goBlock table td {
   	align: center !important;
   	
 }
+.FP {
+	color: #999999; 
+}
+.F {
+	color: #999966;
+}
+.P {
+	color: #999933;
+}
