now can display first button in pagination navigation on dataTables

--- a/WebContent/resources/css/searchPage.css
+++ b/WebContent/resources/css/searchPage.css
@@ -122,7 +122,11 @@ div.dataTables_length {
 	margin-left: 5px;
 }
 div.dataTables_info, div.dataTables_paginate {
-	display: inline;	
+	/*display: inline;	*/
+}
+div.dataTables_info {
+	display: block;
+	margin-bottom: 10px;
 }
 div#resultMsg {
 	margin: 10px 5px;
