some style updates to impc images grid so 4 to a row and auto overflow and word-wrap so we don't get a disrupted grid

--- a/WebContent/resources/css/default.css
+++ b/WebContent/resources/css/default.css
@@ -684,6 +684,7 @@ div.dataTables_info, div.dataTables_paginate {
 .thumb-image-holder{
 	width:200px;
 	height:200px;
+	margin:10px;
 	/* background-color: #999; */
  }
  
