--- a/WebContent/resources/css/default.css
+++ b/WebContent/resources/css/default.css
@@ -107,7 +107,7 @@ input.auto              { width: auto; }
 #footerline             { font-size: 0.8em; color: #fff; border-top: #eee 4px solid; padding: 2em 0 1em 0; background: #666; }
 
 /* Mainnavi */
-#mn                     { position: absolute; margin-left: 175px; top: 1px; }
+#mn                     { position: absolute; margin-left: 175px; top: 1px;}
 #mn li                  { float: left; font-size: 1.2em; margin-right: 0.3em; }
 #mn li li               { float: none; font-size: 0.8em; font-weight: 400; background: #eee; margin-right: 0; border-left: #ccc 1px solid; border-right: #ccc 1px solid; }
 #mn li a                { text-decoration: none; color: #666; display: block; padding: 0.3em 0.7em;  }
@@ -259,20 +259,26 @@ p.editlink              { margin-top: 8em; padding-top: 1em; border-top: #eee 1p
 .reposition .btn        { background: #0978a1; }
 .reposition .btn:hover  { background: #777; }
 /*#bigsearchbox           { background: #0978a1; padding: 0.5em; } /* for the search page */
-#bigsearchbox           { background: #0978a1; padding: 3px; width: 270px; position: absolute; top: 3px; right: -55%;
-							height: 27px; line-height: 0px;
-} /* for the search page */
+#bigsearchbox           { background: #0978a1; padding: 3px; width: 286px; 
+							height: 27px; line-height: 0px; float: left;
+}
+nav#mn {width: 950px;}
+div#block-menu-block-1  {
+	float: left;
+}
+
+ /* for the search page */
 a#searchExample {
-	position: absolute;
-	top:7px;
-	right: -5%;
+	float: right;
 	text-decoration: none;
 	border-radius: 5px;
-    border: 1px solid gray;
-    margin-left: 3px;
+    border: 1px solid white;
+    margin-right: 1px;
+    margin-top: 3px;
     padding: 10px 4px 5px 3px;
     width: 3px;
     height: 3px; 
+    color: white;
 }
 #bigsearchbox input     { /*padding-left: 0; text-indent: 10px;*/ width: 259px; height: 13px !important; font-size: 14px; line-height: 20px; padding-left: 10px;}
 #bigsearchbox i#sicon { position: absolute; top: -4px;}
