--- a/WebContent/resources/css/default.css
+++ b/WebContent/resources/css/default.css
@@ -180,7 +180,7 @@ input.auto              { width: auto; }
 #vnavi li + li          { margin-left: 1em; }
 
 /* Breadcrumb */
-.breadcrumb             { position: absolute; z-index: 0; margin-top: -4em; font-size: 0.8em; }
+.breadcrumb             { position: absolute; z-index: 0; margin-top: -4em; font-size: 0.8em; width:100%;}
 .breadcrumb a           { color: #666; }
 .breadcrumb a:hover     { color: #0978a1; }
 .page-contact .breadcrumb,
@@ -260,29 +260,74 @@ p.editlink              { margin-top: 8em; padding-top: 1em; border-top: #eee 1p
 .reposition .btn:hover  { background: #777; }
 /*#bigsearchbox           { background: #0978a1; padding: 0.5em; } /* for the search page */
 #bigsearchbox           { background: #0978a1; padding: 3px; width: 286px; margin-top: 2px;
-							height: 29px; line-height: 0px; float: left;
+							height: 27px; line-height: 0px; float: left;
 }
+#bigsearchbox2           { background: #0978a1; padding: 3px; width: 420px; margin-top: -22px; margin-right: 50px;
+							height: 29px; line-height: 0px; float: right;
+}
+
 nav#mn {width: 950px;}
 div#block-menu-block-1  {
 	float: left;
 }
 
  /* for the search page */
-a#searchExample {
+ i.batchQuery, i.searchExample {
+ 	float: right;
+	text-decoration: none;
+	border-radius: 3px;
+    border: 1px solid white;
+    margin: 3px 4px 0 1px;
+    padding: 1px 2px 5px 3px;
+    width: 10px;
+    height: 12px; 
+    color: white;
+    text-align: center;
+ }
+ i.batchQuery {
+ 	 width: 15px;
+ }
+ i.batchQuery2, i.searchExample2 {
+ 	float: right;
+	text-decoration: none;
+	border-radius: 3px;
+    border: 1px solid white;
+    margin: 3px 4px 0 1px;
+    padding: 1px 2px 5px 3px;
+    width: 10px;
+    height: 12px; 
+    color: white;
+    text-align: center;
+ }
+ i.batchQuery2 {
+ 	 width: 15px;
+ }
+ 
+a#searchExample, a#batchQuery {
 	float: right;
 	text-decoration: none;
-	border-radius: 5px;
+	border-radius: 3px;
     border: 1px solid white;
-    margin-right: 1px;
-    margin-top: 3px;
-    padding: 10px 4px 5px 3px;
-    width: 3px;
+    margin: 5px 4px 0 1px;
+    padding: 10px 2px 5px 3px;
+    width: 10px;
     height: 3px; 
     color: white;
+    text-align: center;
 }
+a#batchQuery {
+	width: 15px;
+	padding: 8px 3px 8px 3px;
+}
+
+
 div#footerline #bigsearchbox {display: none;}
-#bigsearchbox input     { /*padding-left: 0; text-indent: 10px;*/ width: 259px; height: 15px !important; font-size: 14px; line-height: 20px; padding-left: 10px;}
+#bigsearchbox input     { /*padding-left: 0; text-indent: 10px;*/ width: 220px; height: 12px !important; font-size: 14px; line-height: 20px; padding-left: 10px;}
 #bigsearchbox i#sicon { position: absolute; top: -1px;}
+
+#bigsearchbox2 input     { /*padding-left: 0; text-indent: 10px;*/ width: 331px; height: 23px !important; font-size: 14px; line-height: 20px; padding-left: 30px;}
+#bigsearchbox2 i#sicon { position: absolute; top: -1px;}
+
 
 /* Block IMPReSS */
 #block-block-3 .head    { background: url('../img/logo/impresslogo.png') center right no-repeat; padding-right: 0; margin-right: 1em; }
