Added gene grouping by center.

--- a/WebContent/resources/css/parallelCoordinates/style.css
+++ b/WebContent/resources/css/parallelCoordinates/style.css
@@ -54,7 +54,7 @@ p {
 #legend { 
   float: left;
   clear: left;
-  margin: 0 200px 0 12px;
+  margin: 80px 200px 0 12px;
   font-size: 11px;
   line-height: 1.6em;
 }
